genres alignment fix

--- a/src/components/carousel/style.scss
+++ b/src/components/carousel/style.scss
@@ -1,39 +1,48 @@
 @import "../../mixins.scss";
+
 .carousel {
     margin-bottom: 50px;
+
     .contentWrapper {
         position: relative;
     }
+
     .carouselTitle {
         font-size: 24px;
         color: var(--white);
         margin-bottom: 20px;
         font-weight: normal;
     }
+
     .arrow {
         font-size: 30px;
         color: var(--white);
         position: absolute;
         top: 44%;
-        
+
         transform: translateY(-50%);
         cursor: pointer;
         opacity: 0.8;
         z-index: 1;
         display: none;
+
         @include md {
             display: block;
         }
+
         &:hover {
-            opacity: 1  ;
+            opacity: 1;
         }
     }
+
     .carouselLeftNav {
         left: 30px;
     }
+
     .carouselRightNav {
         right: 30px;
     }
+
     .loadingSkeleton {
         display: flex;
         gap: 10px;
@@ -41,35 +50,44 @@
         margin-right: -20px;
         margin-left: -20px;
         padding: 0 20px;
+
         @include md {
             gap: 20px;
             overflow: hidden;
             margin: 0;
             padding: 0;
         }
+
         .skeletonItem {
             width: 125px;
+
             @include md {
                 width: calc(25% - 15px);
             }
+
             @include lg {
                 width: calc(20% - 16px);
             }
+
             flex-shrink: 0;
+
             .posterBlock {
                 border-radius: 12px;
                 width: 100%;
                 aspect-ratio: 1 / 1.5;
                 margin-bottom: 30px;
             }
+
             .textBlock {
                 display: flex;
                 flex-direction: column;
+
                 .title {
                     width: 100%;
                     height: 20px;
                     margin-bottom: 10px;
                 }
+
                 .date {
                     width: 75%;
                     height: 20px;
@@ -77,6 +95,7 @@
             }
         }
     }
+
     .carouselItems {
         display: flex;
         gap: 10px;
@@ -84,22 +103,28 @@
         margin-right: -20px;
         margin-left: -20px;
         padding: 0 20px;
+
         @include md {
             gap: 20px;
             overflow: hidden;
             margin: 0;
             padding: 0;
         }
+
         .carouselItem {
             width: 125px;
             cursor: pointer;
+
             @include md {
                 width: calc(25% - 15px);
             }
+
             @include lg {
                 width: calc(20% - 16px);
             }
+
             flex-shrink: 0;
+
             .posterBlock {
                 position: relative;
                 width: 100%;
@@ -111,6 +136,7 @@
                 align-items: flex-end;
                 justify-content: space-between;
                 padding: 10px;
+
                 .lazy-load-image-background {
                     position: absolute;
                     top: 0;
@@ -119,6 +145,7 @@
                     height: 100%;
                     border-radius: 12px;
                     overflow: hidden;
+
                     img {
                         width: 100%;
                         height: 100%;
@@ -126,6 +153,7 @@
                         object-position: center;
                     }
                 }
+
                 .circleRating {
                     width: 40px;
                     height: 40px;
@@ -133,34 +161,41 @@
                     top: 30px;
                     background-color: var(--white);
                     flex-shrink: 0;
+
                     @include md {
                         width: 50px;
                         height: 50px;
                     }
                 }
+
                 .genres {
                     // display: none;
                     position: relative;
-                    @include md {
-                        display: flex;
-                        flex-flow: wrap;
-                        justify-content: flex-end;
-                    }
+
+                    // @include md {
+                    //     display: flex;
+                    //     flex-flow: wrap;
+                    //     justify-content: flex-end;
+                    // }
                 }
             }
+
             .textBlock {
                 color: var(--white);
                 display: flex;
                 flex-direction: column;
+
                 .title {
                     font-size: 16px;
                     margin-bottom: 10px;
                     line-height: 24px;
                     @include ellipsis(1);
+
                     @include md {
                         font-size: 20px;
                     }
                 }
+
                 .date {
                     font-size: 14px;
                     opacity: 0.5;
