--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,5 +1,7 @@
 @import "../../mixins.scss";
 
+
+
 .header {
     position: fixed;
     transform: translateY(0);
@@ -9,14 +11,17 @@
     align-items: center;
     transition: all ease 0.5s;
     z-index: 2;
+
     &.top {
         background: rgba(0, 0, 0, 0.25);
         backdrop-filter: blur(3.5px);
         -webkit-backdrop-filter: blur(3.5px);
     }
+
     &.show {
         background-color: var(--black3);
     }
+
     &.hide {
         transform: translateY(-60px);
     }
@@ -26,19 +31,24 @@
         align-items: center;
         justify-content: space-between;
     }
+
     .logo {
         cursor: pointer;
+
         img {
             height: 50px;
         }
     }
+
     .menuItems {
         list-style-type: none;
         display: none;
         align-items: center;
+
         @include md {
             display: flex;
         }
+
         .menuItem {
             height: 60px;
             display: flex;
@@ -47,19 +57,22 @@
             color: var(--white);
             font-weight: 500;
             position: relative;
-            transition:all ease-in-out 0.2s;
+            transition: all ease-in-out 0.2s;
             cursor: pointer;
+
             &.searchIcon {
                 margin-right: 0;
             }
+
             svg {
                 font-size: 18px;
-               
+
             }
+
             &:hover {
                 color: var(--pink);
             }
-         
+
         }
     }
 
@@ -67,9 +80,11 @@
         display: flex;
         align-items: center;
         gap: 20px;
+
         @include md {
             display: none;
         }
+
         svg {
             font-size: 18px;
             color: var(--white);
@@ -78,6 +93,7 @@
 
     &.mobileView {
         background: var(--black3);
+
         .menuItems {
             display: flex;
             position: absolute;
@@ -89,6 +105,7 @@
             padding: 20px 0;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
             animation: mobileMenu 0.3s ease forwards;
+
             .menuItem {
                 font-size: 20px;
                 width: 100%;
@@ -98,6 +115,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
+
                 &:last-child {
                     display: none;
                 }
@@ -107,35 +125,38 @@
 
     .searchBar {
         width: 100%;
-         height: 60px;
+        height: 60px;
         background-color: var(--white);
         position: absolute;
         top: 60px;
-        
+
         animation: mobileMenu 0.3s ease forwards;
-        &.error{
-            animation:shake 0.5s;
+
+        &.error {
+            animation: shake 0.5s;
             animation-iteration-count: 1;
         }
+
         .searchInput {
             display: flex;
             align-items: center;
             height: 40px;
             margin-top: 10px;
             width: 100%;
-           
+
             svg {
                 font-size: 20px;
                 flex-shrink: 0;
                 margin-left: 10px;
                 cursor: pointer;
-                color:var(--black);
-               transition:all 0.5s;
-               &:hover{
-                color: var(--pink);
+                color: var(--black);
+                transition: all 0.5s;
+
+                &:hover {
+                    color: var(--pink);
+                }
             }
-            }
-          
+
             input {
                 width: 100%;
                 height: 50px;
@@ -145,7 +166,7 @@
                 border-radius: 30px 0 0 30px;
                 padding: 0 15px;
                 font-size: 14px;
-                
+
                 @include md {
                     height: 60px;
                     font-size: 20px;
@@ -160,21 +181,51 @@
     0% {
         transform: translateY(-130%);
     }
+
     100% {
         transform: translateY(0);
     }
 }
 
-@keyframes shake{
-    0%{transform: translateX(10px);}
-    10%{transform: translateX(-10px);}
-    20%{transform: translateX(10px);}
-   30%{transform: translateX(-10px);}
-   40%{transform: translateX(10px);}
-   50%{transform: translateX(-10px);}
-   60%{transform: translateX(10px);}
-   80%{transform: translateX(-10px);}
-   90%{transform: translateX(10px);}
-   100%{transform: translateX(-10px);}
- 
- }
+@keyframes shake {
+    0% {
+        transform: translateX(10px);
+    }
+
+    10% {
+        transform: translateX(-10px);
+    }
+
+    20% {
+        transform: translateX(10px);
+    }
+
+    30% {
+        transform: translateX(-10px);
+    }
+
+    40% {
+        transform: translateX(10px);
+    }
+
+    50% {
+        transform: translateX(-10px);
+    }
+
+    60% {
+        transform: translateX(10px);
+    }
+
+    80% {
+        transform: translateX(-10px);
+    }
+
+    90% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        transform: translateX(-10px);
+    }
+
+}
